2020-10-13         [RELEASE] Release of social_gdpr 3.0.2 (Nicole Cordes)
2020-10-07 ae3f3b0 [BUGFIX] Use flexible scaling for OpenStreetMap maps (Nicole Cordes)
2020-10-07 ec7aa93 [BUGFIX] Add default background to maps (Nicole Cordes)

2020-10-01         [RELEASE] Release of social_gdpr 3.0.1 (Nicole Cordes)
2020-10-01 d02a7ba [BUGFIX] Use proper scaling for OpenStreetMap maps (Nicole Cordes)

2020-09-24         [RELEASE] Release of social_gdpr 3.0.0 (Nicole Cordes)
2020-09-24 9885fd8 !!![FEATURE] Add extension configuration for preview images (Nicole Cordes)
2020-09-24 ea7fdb7 [FEATURE] Add OpenStreetMap handler (Nicole Cordes)
2020-09-23 aef01f7 [TASK] Raise extension version to 3.x (Nicole Cordes)

2020-09-23         [RELEASE] Release of social_gdpr 2.0.2 (Nicole Cordes)
2020-09-17 f213798 [BUGFIX] Use correct CSS class for map icon (Nicole Cordes)
2020-09-17 423f5d8 [BUGFIX] Improve iframe height and width detection (Nicole Cordes)

2020-09-03         [RELEASE] Release of social_gdpr 2.0.1 (Nicole Cordes)
2020-09-01 cd6f442 [TASK] Use same size constraints as defined in CSS (Nicole Cordes)
2020-08-31 0c7be44 [FEATURE] add width and height to icon images to improve CLS score (Franz Kugelmann)

2020-08-10         [RELEASE] Release of social_gdpr 2.0.0 (Nicole Cordes)
2020-08-10 45804b9 [FEATURE] Add Google Maps iframe handler (Nicole Cordes)
2020-08-10 6e8ea77 !!![BUGFIX] Handle iframe height and width correctly (Nicole Cordes)
2020-08-10 206e931 [TASK] Raise extension version to 2.x (Nicole Cordes)
2020-08-10 e929b86 [TASK] Update supporting files to EXT:my_skeleton 0.4.0 (Nicole Cordes)

2020-05-29         [RELEASE] Release of social_gdpr 1.0.4 (Nicole Cordes)
2020-05-29 1a5feea [FEATURE] Add functional test for play button path (Nicole Cordes)
2020-05-29 a941ba7 [TASK] Use correct namespace for test classes (Nicole Cordes)
2020-05-29 e614cfa [BUGFIX] Use ImageViewHelper instead of ResourceViewHelper (Nicole Cordes)
